--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@clerk/clerk-react": "^4.27.2",
     "@clerk/nextjs": "^4.26.2",
     "@clerk/themes": "^1.7.9",
+    "@edgestore/react": "^0.1.4",
+    "@edgestore/server": "^0.1.4",
     "@hookform/resolvers": "^3.3.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
+    "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
@@ -22,25 +25,31 @@
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
+    "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@tanstack/react-table": "^8.10.7",
-    "@uploadthing/react": "^5.7.0",
+    "ai": "^2.2.25",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
     "convex": "^1.5.1",
+    "date-fns": "^2.30.0",
     "lucide-react": "^0.292.0",
     "next": "14.0.1",
     "next-themes": "^0.2.1",
+    "novel": "^0.1.22",
+    "openai": "^4.19.1",
     "react": "^18",
+    "react-day-picker": "^8.9.1",
     "react-dom": "^18",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
+    "react-slugify": "^3.0.3",
     "recharts": "^2.9.2",
     "sonner": "^1.1.0",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
-    "uploadthing": "^5.7.4",
     "zod": "^3.22.4",
     "zustand": "^4.4.6"
   },
